# jpt-dev

./: .gitignore  .readthedocs.yaml  Makefile  README.md  defs  main.py  pyproject.toml  requirements-deb.txt  requirements-dev.txt  requirements-plot.txt  requirements.txt  setup.py
.github/workflows/: pypi-package-deployment.yml  pypi-package.yml  reusable-publish-package.yml  reusable-test-and-build.yml  test-and-build.yml
doc/: Makefile  docstrings_template.txt  requirements.txt
doc/source/: _md_tests.rst  api.rst  apidoc.rst  changelog.rst  conf.py  developers.rst  examples.rst  faq.rst  guide.rst  howto.rst  howto_classification.rst  howto_dependency_discovery.rst  howto_regression.rst  howto_serialization.rst  howto_split_validation.rst  howto_variables.rst  howto_visualization.rst  index.rst  installation.rst  integrations.rst  introduction.rst  matcalotools.rst  mlflow_integration.rst  quickstart.rst  references.rst  refs.bib  resources.rst  setup.rst  users.rst
doc/source/_static/: custom.css
doc/source/_static/css/: custom_styles.css  theme.css
doc/source/_templates/: teaser.html
doc/source/notebooks/: important_datastructures.ipynb  tutorial_intervals.ipynb  tutorial_iris.ipynb  tutorial_jpt.ipynb  tutorial_learning.ipynb  tutorial_mlflow.ipynb  tutorial_mnist.ipynb  tutorial_reasoning.ipynb  tutorial_regression.ipynb  tutorial_variables.ipynb  tutorial_visualization.ipynb
examples/: abalone.py  airlines_depdelay.py  alarm.py  banana.py  crossval.py  evaluation_icml.py  federal.py  gaussians.py  important_datastructures.ipynb  mnist.py  muesli.py  neems.py  olivetti.py  plants.py  processes.py  quantile.py  regression.py  restaurant.py  topsecret.py  tourism.py  tutorial.ipynb  tutorial_intervals.ipynb  tutorial_iris.ipynb  tutorial_jpt.ipynb  tutorial_learning.ipynb  tutorial_mlflow.ipynb  tutorial_mnist.ipynb  tutorial_reasoning.ipynb  tutorial_regression.ipynb  tutorial_stock_forecasting.ipynb  tutorial_variables.ipynb  tutorial_visualization.ipynb  xi_pruning.py
examples/data/: alarm.pkl  banana.csv  human_muesli.pkl  muesli.csv  restaurant-mixed.csv  restaurant.csv  tourism.csv
experiments/: evaluate_extended.py  evaluate_split_validation.py  paper_split_validation.tex  results.json  results_extended.json
paper/: .gitignore  README.md  ensemble_jpt.tex
releases/jpt-0.1.2/: jpt-0.1.2-cp310-cp310-linux_x86_64.whl
src/: constants.py  main.py  setup.py  utils.py  variables.py
src/cutils/: cutils.pxd
src/functions/: func.pxd  func.pyx
src/intervals/: __init__.py  base.pxd  base.pyx  contset.pxd  contset.pyx  intset.pyx  intset.pyxbld  unionset.pxd  unionset.pyx
src/jpt/: __init__.py  constants.py  ensembles.py  factor_graphs.py  jpt_like.py  mlflow_wrapper.py  pca_trees.py  probabilistic_circuit.py  relational_jpt.py  sampling.py  sequential_jpt.py  sequential_trees.py  trees.py  utils.py  variables.py  version.py
src/jpt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/jpt/base/: constants.py  cutils.pxd  cutils.pyx  errors.py  functions.pxd  functions.pyx  intervals.pxd  intervals.pyx  multicore.py  pyximporter.py  quantiles.pxd  quantiles.pyx  sampling.py  utils.py
src/jpt/base/correlation/: __init__.py  xi.py
src/jpt/base/cutils/: cutils.pxd  cutils.pyx
src/jpt/base/functions/: __init__.py  func.pxd  func.pyx
src/jpt/base/intervals/: __init__.py  base.pxd  base.pyx  contset.pxd  contset.pyx  intset.pxd  intset.pyx  unionset.pxd  unionset.pyx
src/jpt/base/utils/: __init__.py  heap.py  multicore.py  pyximporter.py
src/jpt/distributions/: __init__.py  multivariate.py  univariate.py  utils.py
src/jpt/distributions/qpd/: __init__.py  cdfreg.pxd  cdfreg.pyx  quantiles.pxd  quantiles.pyx  vwcdfreg.pyx  vwcdfreg.pyxbld
src/jpt/distributions/quantile/: cdfreg.pxd  cdfreg.pyx  cdfreg.pyxbld  quantiles.pxd  quantiles.pyx
src/jpt/distributions/univariate/: __init__.py  distribution.py  gaussian.py  integer.py  multinomial.py  numeric.py
src/jpt/inference/: __init__.py  likelihood.py  mpe.py
src/jpt/learning/: c45.py  cdfreg.pxd  cdfreg.pyx  distributions.py  example.py  impurity.pyx  intervals.py  pc_impurity.pyx  preprocessing.py  probs.py  trees.py
src/jpt/learning/dependency/: __init__.py  base.py  xi.py
src/jpt/learning/impurity/: __init__.py  impurity.pyx
src/jpt/learning/pruning/: xi.py  (+1 more)
src/jpt/legacy/: example.py  probs.py
src/jpt/plotting/: helpers.py  jpt.py  rendering.py
src/trees/: example.py  gaussian.py  intervals.py  probs.py  trees.py
test/: muesli.jpt  test_cdfreg.py  test_cutils.py  test_distributions.py  test_examples.py  test_functions.py  test_impurity.py  test_inference.py  test_interval.py  test_jpt.py  test_mlflow.py  test_multicore.py  test_pc_impurity.pyx  test_pca.py  test_plotting.py  test_preprocessing.py  test_probabilistic_circuit.py  test_relational_learning.py  test_sampling.py  test_sequence_modelling.py  test_sequences.py  test_utils.py  test_variables.py  testutils.py  utils.py
test/TEST/: Restaurant-Mixed.dot  Restaurant.dot
test/base/: __init__.py
test/base/intervals/: __init__.py  test_continuous_set.py  test_interval.py
test/resources/: berlin_crimes.jpt  muesli.jpt
tests/: JPT-MPE.py  cdfreg_test.py  cdfregtest.py  cutils_test.py  interval_test.py
tests/test/: test_distributions.py  test_ensembles.py  test_examples.py  test_impurity.py  test_inference.py  test_jpt.py  test_plotting.py  test_sequences.py  test_trees.py  testutils.py
tests/test/base/: test_cutils.py  test_utils.py  test_xi_correlation.py
tests/test/inference/: test_likelihood.py  test_mpe.py
tests/test/learning/: test_dependency_discovery.py  test_impurity.py  test_pruning.py
tests/test/plotting/: test_matplotlib_engine.py  test_plotly_engine.py  test_plotting.py
tests/test/resources/: berlin_crimes.jpt
tests/test/test_variables/: test_integer.py  test_numeric.py  test_symbolic.py  test_variable_map.py
(+27 files in other folders)
