[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cython==0.29.36",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyjpt"
version = "0.0.0"  # Placeholder; will be overwritten dynamically
description = '''Joint Probability Trees (short JPTs) are a formalism for learning of and reasoning about joint probability
distributions, which is tractable for practical applications. JPTs support both symbolic and subsymbolic variables in a single
hybrid model, and they do not rely on prior knowledge about variable dependencies or families of distributions.
JPT representations build on tree structures that partition the problem space into relevant subregions that are elicited
from the training data instead of postulating a rigid dependency model prior to learning. Learning and reasoning scale
linearly in JPTs, and the tree structure allows white-box reasoning about any posterior probability :math:`P(Q\mid E)`,
such that interpretable explanations can be provided for any inference result. This documentation introduces the
code base of the ``pyjpt`` library, which is implemented in Python/Cython, and showcases the practical
applicability of JPTs in high-dimensional heterogeneous probability spaces, making it
a promising alternative to classic probabilistic

## Documentation
The documentation is hosted on readthedocs.org [here](https://joint-probability-trees.readthedocs.io/en/latest/).'''
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    # Contents from requirements.txt will be added here
]

[project.optional-dependencies]
mlflow = ["mlflow >= 2.5.0"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = [
    "jpt",
    "jpt.learning",
    "jpt.inference",
    "jpt.base",
    "jpt.distributions",
    "jpt.distributions.quantile",
    "jpt.distributions.univariate"
]
ext-modules = [
    { name = "jpt.base.cutils", sources = ["src/jpt/base/cutils.pyx"] },
    { name = "jpt.base.functions", sources = ["src/jpt/base/functions.pyx"] },
    { name = "jpt.base.intervals", sources = ["src/jpt/base/intervals.pyx"] },
    { name = "jpt.distributions.quantile.quantiles", sources = ["src/jpt/distributions/quantile/quantiles.pyx"] },
    { name = "jpt.distributions.quantile.cdfreg", sources = ["src/jpt/distributions/quantile/cdfreg.pyx"] },
    { name = "jpt.learning.impurity", sources = ["src/jpt/learning/impurity.pyx"] }
]
include-package-data = true

[tool.setuptools.package-data]
jpt = [".version"]
